fix(css): reset outline the smart way windows high contrast mode compatible

--- a/packages/vkui/src/components/Search/Search.module.css
+++ b/packages/vkui/src/components/Search/Search.module.css
@@ -98,7 +98,7 @@
 }
 
 .Search__nativeInput:focus {
-  outline: none;
+  outline: var(--vkui_internal--outline-reset);
 }
 
 .Search--has-after .Search__nativeInput {
