--- a/packages/vkui/src/components/TabbarItem/TabbarItem.module.css
+++ b/packages/vkui/src/components/TabbarItem/TabbarItem.module.css
@@ -5,7 +5,7 @@
   color: var(--vkui--color_tabbar_text_inactive);
   text-decoration: none;
   border: 0;
-  outline: none;
+  outline: var(--vkui_internal--outline-reset);
   padding: 0;
   background: transparent;
   height: var(--vkui_internal--tabbar_height);
